nginx-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: ingress-service
  namespace: helm-playground

  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/?(.*)
            backend:
              service:
                name: fastapi-service
                port:
                  number: 8000

          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: client-service
                port:
                  number: 3000
